setting up the stabilizer node + dependencies

--- a/src/sim_pkg/package.xml
+++ b/src/sim_pkg/package.xml
@@ -17,6 +17,7 @@
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
   <exec_depend>psutil</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
